logs/dag_id=people/run_id=manual__2023-11-03T175657.548464+0000/task_id=create_people_table/attempt=1.log
[2023-11-03T17:56:59.092+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T17:56:57.548464+00:00 [queued]>
[2023-11-03T17:56:59.114+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T17:56:57.548464+00:00 [queued]>
[2023-11-03T17:56:59.116+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T17:56:59.117+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-03T17:56:59.118+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T17:56:59.143+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_people_table> on 2023-11-03 17:56:57.548464+00:00
[2023-11-03T17:56:59.151+0000] {standard_task_runner.py:55} INFO - Started process 7104 to run task
[2023-11-03T17:56:59.154+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'people', 'create_people_table', 'manual__2023-11-03T17:56:57.548464+00:00', '--job-id', '93', '--raw', '--subdir', 'DAGS_FOLDER/people.py', '--cfg-path', '/tmp/tmp2if22vol']
[2023-11-03T17:56:59.156+0000] {standard_task_runner.py:83} INFO - Job 93: Subtask create_people_table
[2023-11-03T17:56:59.240+0000] {task_command.py:376} INFO - Running <TaskInstance: people.create_people_table manual__2023-11-03T17:56:57.548464+00:00 [running]> on host 113d79be32ee
[2023-11-03T17:56:59.338+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=people
AIRFLOW_CTX_TASK_ID=create_people_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-03T17:56:57.548464+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-03T17:56:57.548464+00:00
[2023-11-03T17:56:59.349+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-11-03T17:56:59.354+0000] {sql.py:315} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS people (
                Index INT NOT NULL primary key,
                User_Id varchar(100),
                First_Name varchar(100),
                Last_Name varchar(100),
                Sex varchar(100),
                Email varchar(100),
            );
        , parameters: None
[2023-11-03T17:56:59.356+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 9:             );
                    ^

[2023-11-03T17:56:59.367+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=people, task_id=create_people_table, execution_date=20231103T175657, start_date=20231103T175659, end_date=20231103T175659
[2023-11-03T17:56:59.390+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 93 for task create_people_table (syntax error at or near ")"
LINE 9:             );
                    ^
; 7104)
[2023-11-03T17:56:59.408+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-03T17:56:59.448+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
